Engage/parsing/EngageParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/grammarware/projects/engage/Engage/parsing/Engage.g4 by ANTLR 4.9

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Engage.parsing {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9")]
[System.CLSCompliant(false)]
public partial class EngageParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, ID=34, QUOTED=35, WHITESPACE=36, NEWLINE=37, COMMENT=38;
	public const int
		RULE_engSpec = 0, RULE_typeDecl = 1, RULE_superType = 2, RULE_tokenDecl = 3, 
		RULE_lexeme = 4, RULE_handlerDecl = 5, RULE_trigger = 6, RULE_reaction = 7, 
		RULE_name = 8, RULE_flag = 9, RULE_assignment = 10, RULE_operation = 11;
	public static readonly string[] ruleNames = {
		"engSpec", "typeDecl", "superType", "tokenDecl", "lexeme", "handlerDecl", 
		"trigger", "reaction", "name", "flag", "assignment", "operation"
	};

	private static readonly string[] _LiteralNames = {
		null, "'namespace'", "'types'", "'tokens'", "'handlers'", "','", "'<:'", 
		"';'", "'::'", "'number'", "'string'", "'->'", "'where'", "'while'", "'BOF'", 
		"'EOF'", "'upon'", "'push'", "'('", "')'", "'wrap'", "'lift'", "'drop'", 
		"'trim'", "'*'", "'pass'", "'dump'", "':='", "'pop'", "'pop*'", "'await'", 
		"'with'", "'await*'", "'tear'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "ID", "QUOTED", 
		"WHITESPACE", "NEWLINE", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Engage.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static EngageParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public EngageParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public EngageParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class EngSpecContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(EngageParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext[] typeDecl() {
			return GetRuleContexts<TypeDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TypeDeclContext typeDecl(int i) {
			return GetRuleContext<TypeDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TokenDeclContext[] tokenDecl() {
			return GetRuleContexts<TokenDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TokenDeclContext tokenDecl(int i) {
			return GetRuleContext<TokenDeclContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HandlerDeclContext[] handlerDecl() {
			return GetRuleContexts<HandlerDeclContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HandlerDeclContext handlerDecl(int i) {
			return GetRuleContext<HandlerDeclContext>(i);
		}
		public EngSpecContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_engSpec; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterEngSpec(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitEngSpec(this);
		}
	}

	[RuleVersion(0)]
	public EngSpecContext engSpec() {
		EngSpecContext _localctx = new EngSpecContext(Context, State);
		EnterRule(_localctx, 0, RULE_engSpec);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 24; Match(T__0);
			State = 25; Match(ID);
			State = 26; Match(T__1);
			State = 30;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 27; typeDecl();
				}
				}
				State = 32;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 33; Match(T__2);
			State = 37;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__8) | (1L << T__9) | (1L << QUOTED))) != 0)) {
				{
				{
				State = 34; tokenDecl();
				}
				}
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 40; Match(T__3);
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__13) | (1L << T__14) | (1L << ID) | (1L << QUOTED))) != 0)) {
				{
				{
				State = 41; handlerDecl();
				}
				}
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(EngageParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(EngageParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SuperTypeContext superType() {
			return GetRuleContext<SuperTypeContext>(0);
		}
		public TypeDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterTypeDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitTypeDecl(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclContext typeDecl() {
		TypeDeclContext _localctx = new TypeDeclContext(Context, State);
		EnterRule(_localctx, 2, RULE_typeDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 47; Match(ID);
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 48; Match(T__4);
				State = 49; Match(ID);
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 57;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__5) {
				{
				State = 55; Match(T__5);
				State = 56; superType();
				}
			}

			State = 59; Match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SuperTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(EngageParser.ID, 0); }
		public SuperTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_superType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterSuperType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitSuperType(this);
		}
	}

	[RuleVersion(0)]
	public SuperTypeContext superType() {
		SuperTypeContext _localctx = new SuperTypeContext(Context, State);
		EnterRule(_localctx, 4, RULE_superType);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 61; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TokenDeclContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LexemeContext[] lexeme() {
			return GetRuleContexts<LexemeContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LexemeContext lexeme(int i) {
			return GetRuleContext<LexemeContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(EngageParser.ID, 0); }
		public TokenDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tokenDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterTokenDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitTokenDecl(this);
		}
	}

	[RuleVersion(0)]
	public TokenDeclContext tokenDecl() {
		TokenDeclContext _localctx = new TokenDeclContext(Context, State);
		EnterRule(_localctx, 6, RULE_tokenDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63; lexeme();
			State = 68;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__4) {
				{
				{
				State = 64; Match(T__4);
				State = 65; lexeme();
				}
				}
				State = 70;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 71; Match(T__7);
			State = 72; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LexemeContext : ParserRuleContext {
		public IToken Q;
		public IToken N;
		public IToken S;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QUOTED() { return GetToken(EngageParser.QUOTED, 0); }
		public LexemeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_lexeme; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterLexeme(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitLexeme(this);
		}
	}

	[RuleVersion(0)]
	public LexemeContext lexeme() {
		LexemeContext _localctx = new LexemeContext(Context, State);
		EnterRule(_localctx, 8, RULE_lexeme);
		try {
			State = 77;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case QUOTED:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74; _localctx.Q = Match(QUOTED);
				}
				break;
			case T__8:
				EnterOuterAlt(_localctx, 2);
				{
				State = 75; _localctx.N = Match(T__8);
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 76; _localctx.S = Match(T__9);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HandlerDeclContext : ParserRuleContext {
		public IToken Adv;
		[System.Diagnostics.DebuggerNonUserCode] public TriggerContext trigger() {
			return GetRuleContext<TriggerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ReactionContext reaction() {
			return GetRuleContext<ReactionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext[] assignment() {
			return GetRuleContexts<AssignmentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment(int i) {
			return GetRuleContext<AssignmentContext>(i);
		}
		public HandlerDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_handlerDecl; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterHandlerDecl(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitHandlerDecl(this);
		}
	}

	[RuleVersion(0)]
	public HandlerDeclContext handlerDecl() {
		HandlerDeclContext _localctx = new HandlerDeclContext(Context, State);
		EnterRule(_localctx, 10, RULE_handlerDecl);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79; trigger();
			State = 80; Match(T__10);
			State = 81; reaction();
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__11 || _la==T__12) {
				{
				State = 82;
				_localctx.Adv = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==T__11 || _la==T__12) ) {
					_localctx.Adv = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 83; assignment();
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__4) {
					{
					{
					State = 84; Match(T__4);
					State = 85; assignment();
					}
					}
					State = 90;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TriggerContext : ParserRuleContext {
		public IToken T;
		public IToken Bof;
		public IToken Eof;
		public IToken NT;
		public IToken Flag;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode QUOTED() { return GetToken(EngageParser.QUOTED, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(EngageParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(EngageParser.ID, i);
		}
		public TriggerContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_trigger; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterTrigger(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitTrigger(this);
		}
	}

	[RuleVersion(0)]
	public TriggerContext trigger() {
		TriggerContext _localctx = new TriggerContext(Context, State);
		EnterRule(_localctx, 12, RULE_trigger);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case QUOTED:
				{
				State = 93; _localctx.T = Match(QUOTED);
				}
				break;
			case T__13:
				{
				State = 94; _localctx.Bof = Match(T__13);
				}
				break;
			case T__14:
				{
				State = 95; _localctx.Eof = Match(T__14);
				}
				break;
			case ID:
				{
				State = 96; _localctx.NT = Match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 101;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__15) {
				{
				State = 99; Match(T__15);
				State = 100; _localctx.Flag = Match(ID);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ReactionContext : ParserRuleContext {
		public IToken Command;
		public IToken Star;
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(EngageParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(EngageParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlagContext flag() {
			return GetRuleContext<FlagContext>(0);
		}
		public ReactionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_reaction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterReaction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitReaction(this);
		}
	}

	[RuleVersion(0)]
	public ReactionContext reaction() {
		ReactionContext _localctx = new ReactionContext(Context, State);
		EnterRule(_localctx, 14, RULE_reaction);
		int _la;
		try {
			State = 145;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__16:
				EnterOuterAlt(_localctx, 1);
				{
				State = 103; _localctx.Command = Match(T__16);
				State = 104; name();
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__17) {
					{
					State = 105; Match(T__17);
					State = 106; Match(ID);
					State = 111;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==T__4) {
						{
						{
						State = 107; Match(T__4);
						State = 108; Match(ID);
						}
						}
						State = 113;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 114; Match(T__18);
					}
				}

				}
				break;
			case T__19:
				EnterOuterAlt(_localctx, 2);
				{
				State = 117; _localctx.Command = Match(T__19);
				State = 118; name();
				State = 129;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__17) {
					{
					State = 119; Match(T__17);
					State = 120; Match(ID);
					State = 125;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==T__4) {
						{
						{
						State = 121; Match(T__4);
						State = 122; Match(ID);
						}
						}
						State = 127;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 128; Match(T__18);
					}
				}

				}
				break;
			case T__20:
				EnterOuterAlt(_localctx, 3);
				{
				State = 131; _localctx.Command = Match(T__20);
				State = 132; flag();
				}
				break;
			case T__21:
				EnterOuterAlt(_localctx, 4);
				{
				State = 133; _localctx.Command = Match(T__21);
				State = 134; flag();
				}
				break;
			case T__22:
				EnterOuterAlt(_localctx, 5);
				{
				State = 135; _localctx.Command = Match(T__22);
				State = 136; name();
				State = 138;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__23) {
					{
					State = 137; _localctx.Star = Match(T__23);
					}
				}

				}
				break;
			case T__24:
				EnterOuterAlt(_localctx, 6);
				{
				State = 140; _localctx.Command = Match(T__24);
				}
				break;
			case T__25:
				EnterOuterAlt(_localctx, 7);
				{
				State = 141; _localctx.Command = Match(T__25);
				State = 143;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,16,Context) ) {
				case 1:
					{
					State = 142; name();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NameContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(EngageParser.ID, 0); }
		public NameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_name; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterName(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitName(this);
		}
	}

	[RuleVersion(0)]
	public NameContext name() {
		NameContext _localctx = new NameContext(Context, State);
		EnterRule(_localctx, 16, RULE_name);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlagContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(EngageParser.ID, 0); }
		public FlagContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flag; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterFlag(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitFlag(this);
		}
	}

	[RuleVersion(0)]
	public FlagContext flag() {
		FlagContext _localctx = new FlagContext(Context, State);
		EnterRule(_localctx, 18, RULE_flag);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 149; Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperationContext operation() {
			return GetRuleContext<OperationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(EngageParser.ID, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterAssignment(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitAssignment(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 20, RULE_assignment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 151; Match(ID);
				State = 152; Match(T__26);
				}
			}

			State = 155; operation();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationContext : ParserRuleContext {
		public IToken Command;
		public IToken ExtraContext;
		public IToken LocalContext;
		[System.Diagnostics.DebuggerNonUserCode] public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(EngageParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(EngageParser.ID, i);
		}
		public OperationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.EnterOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEngageListener typedListener = listener as IEngageListener;
			if (typedListener != null) typedListener.ExitOperation(this);
		}
	}

	[RuleVersion(0)]
	public OperationContext operation() {
		OperationContext _localctx = new OperationContext(Context, State);
		EnterRule(_localctx, 22, RULE_operation);
		int _la;
		try {
			State = 187;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__27:
				EnterOuterAlt(_localctx, 1);
				{
				State = 157; _localctx.Command = Match(T__27);
				State = 158; name();
				}
				break;
			case T__28:
				EnterOuterAlt(_localctx, 2);
				{
				State = 159; _localctx.Command = Match(T__28);
				State = 160; name();
				}
				break;
			case T__29:
				EnterOuterAlt(_localctx, 3);
				{
				State = 161; _localctx.Command = Match(T__29);
				State = 169;
				ErrorHandler.Sync(this);
				switch (TokenStream.LA(1)) {
				case ID:
					{
					State = 162; name();
					}
					break;
				case T__17:
					{
					{
					State = 163; Match(T__17);
					State = 164; name();
					State = 165; Match(T__15);
					State = 166; _localctx.ExtraContext = Match(ID);
					State = 167; Match(T__18);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 173;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__30) {
					{
					State = 171; Match(T__30);
					State = 172; _localctx.LocalContext = Match(ID);
					}
				}

				}
				break;
			case T__31:
				EnterOuterAlt(_localctx, 4);
				{
				State = 175; _localctx.Command = Match(T__31);
				State = 176; name();
				State = 179;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__30) {
					{
					State = 177; Match(T__30);
					State = 178; _localctx.LocalContext = Match(ID);
					}
				}

				}
				break;
			case T__32:
				EnterOuterAlt(_localctx, 5);
				{
				State = 181; _localctx.Command = Match(T__32);
				State = 182; name();
				}
				break;
			case T__25:
				EnterOuterAlt(_localctx, 6);
				{
				State = 183; _localctx.Command = Match(T__25);
				State = 185;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,22,Context) ) {
				case 1:
					{
					State = 184; name();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace Engage.parsing
